# gitloader

./: .gitignore  README.md  build.sh  gldr.py  hello.py  main.py  pyproject.toml  test.py
src/: cli.py  config.py  githubutils.py
